--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,10 @@
+@import "shared/buttons";
+@import "shared/nav";
+@import "shared/form";
+@import "shared/flashes";
+@import "shared/pagination";
+@import "shared/dropdown";
+
 .content {
   background-color: $white;
 }
