--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -96,7 +96,7 @@ $selectionColor:      #E1F0EE;
 
 // Type variables
 $baseFontFamily:      'PT Sans', Helvetica, Arial, sans-serif;
-// $serifFontFamily:     'Copernicus', Times;
+$serifFont:           'Copernicus', Times;
 $markupFontFamily:     Monaco, Menlo, Consolas, "Courier New", monospace;
 
 $textColor:           $grayLight;
