--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,14 +8,16 @@ body {
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
   width: 100%;
-  height: 100%;
-  z-index: 10;
+  height: 110vh;
+  z-index: 1;
+  position: absolute;
+  top: -70px;
 }
 
 .home {
   h1 {
-    position: relative;
-    z-index: 100;
+    position: absolute;
+    z-index: 2;
     top: 0;
     padding-top: 29vh;
     text-align: center;
