--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+@import "posts/editor";
+
+.rte-form {
+  outline: 1px solid $grayLight;
+  border-radius: 4px;
+  padding: 3px;
+  width: 100%;
+  min-height: 200px;
+}
