--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,2 +1,13 @@
 .container
   h1 Posts
+
+  - @posts.each do |post|
+    = link_to post do
+      .post.mvg
+        p = post.created_at.strftime("%D")
+        h2 = post.title
+
+
+        = link_to "Edit post", edit_post_path(post)
+        span.mhl |
+        = link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } 
