--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,4 +1,17 @@
-<p id="notice"><%= notice %></p>
+- content_for(:title) { "#{@post.title}" }
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+#post-show
+  .container
+    .col-sm-12.col-md-12
+
+      .post-body
+        .title
+          h1 = @post.title
+
+        .content
+          = @post.body.html_safe if @post.body
+ 
+          - if current_user && current_user == @post.user
+            = link_to "Edit post", edit_post_path(@post)
+            span.mhl |
+            = link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } 
