--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -6,18 +6,16 @@ nav class="#{'admin' if user_is_admin?}"
 
     .my-2.my-md-0
       - if current_user
-        a.p-3 href=projects_path
-          | My Projects
-        a.p-3 href=posts_path
-          | My Posts
         a.p-3 href=new_post_path
           | Write
 
         .nav-item.dropdown
           a#navbarDropdown.nav-link.dropdown-toggle href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-            | My Account
+            | #{current_user.username}
           .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
-            / a.dropdown-item href=user_drafts_path(current_user)
+            a.dropdown-item href=projects_path
+              | My Projects
+            a.dropdown-item href=posts_path
               | My Posts
             a.dropdown-item href=settings_path
               | User Settings
