--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -2,4 +2,4 @@
 #form.container.form
   .row
     .post-form.col-md-12
-      = react_component "PostForm", post: @post
+      = react_component "PostEditor", post: @post, readOnly: false
