--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,1 +1,1 @@
-= react_component 'PostForm', { post: @post }
+= react_component "SlateEditor", post: PostSerializer.new(post).serializable_hash, readOnly: false
