Fixes post slate editor form request

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -12,3 +12,22 @@
   width: 100%;
   min-height: 200px;
 }
+
+.post {
+  .title {
+    font-family: $serifFontFamily;
+    font-size: 24px;
+  }
+}
+
+
+#post-show {
+  .post-body {  
+    margin: 40px 0;
+
+    h1 {
+      font-family: $serifFontFamily;
+      font-size: 32px;
+    }
+  }
+}
