--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,5 +1,5 @@
 nav class="#{'admin' if user_is_admin?}"
-  div.container.d-flex.flex-column.flex-md-row.align-items-center
+  .container.d-flex.flex-column.flex-md-row.align-items-center
     a.my-0.mr-md-auto.navbar-brand href=root_path
       / = inline_svg "jelly.svg", title: "jelly Logo"
       | Jelly
