--- a/app/assets/stylesheets/posts/editor.scss
+++ b/app/assets/stylesheets/posts/editor.scss
@@ -10,7 +10,7 @@
   padding-top: 40px;
 
   input.title {
-    font-family: $serifFont;
+    font-family: $serifFontFamily;
     padding: 40px 0 0 0;
     font-weight: 700;
     font-size: 28px;
