--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -1,7 +1,6 @@
 html, body, p, h1, h2, h3, h4, h5,
 ul, ol, li, blockquote, label, form,
-input, 
-span, a {
+input, span, a {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   color: $black;
 }
@@ -11,6 +10,7 @@ a {
 }
 
 a:hover {
+  transition-duration: 0.2s;
   color: darken($brandRed, 14);
 }
 
