--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -5,8 +5,7 @@
     = link_to post do
       .post.mvg
         p = post.created_at.strftime("%D")
-        h2 = post.title
-
+        h2.title = post.title
 
         = link_to "Edit post", edit_post_path(post)
         span.mhl |
