--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -141,7 +141,9 @@
 <div class="home">
   <div class="cover">
     <h1>Jelly Labs <sub>pbc</sub></h1>
+    <p>We're a team making new products and platforms for scientists.</p>
   </div>
+
   <canvas id='canvas' resize hidpi="off" background="#DE2424">
   </canvas>
 </div>
