--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -140,8 +140,10 @@
 
 <div class="home">
   <div class="cover">
-    <h1>Jelly Labs <sub>pbc</sub></h1>
-    <p>We're a team making new products and platforms for scientists.</p>
+    <h1 class="animated fadeIn">
+      Jelly Labs <sub>pbc</sub>
+    </h1>
+    <p class="animated fadeIn">We're a team making new products and platforms for scientists.</p>
   </div>
 
   <canvas id='canvas' resize hidpi="off" background="#DE2424">
