--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,6 +1,7 @@
 nav class="#{'admin' if user_is_admin?}"
   .container.d-flex.flex-column.flex-md-row.align-items-center
-    a.my-0.mr-md-auto.navbar-brand href=root_path
+    - path = current_user.present? ? dashboard_path : root_path
+    a.my-0.mr-md-auto.navbar-brand href=path
       / = inline_svg "jelly.svg", title: "jelly Logo"
       | Jelly
 
@@ -13,6 +14,8 @@ nav class="#{'admin' if user_is_admin?}"
           a#navbarDropdown.nav-link.dropdown-toggle href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
             | #{current_user.username}
           .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
+            a.dropdown-item href=dashboard_path
+              | My Dashboard
             a.dropdown-item href=projects_path
               | My Projects
             a.dropdown-item href=posts_path
