--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -70,3 +70,13 @@ canvas[resize] {
     letter-spacing: 1px;
   }
 }
+
+#dashboard {
+  .post {
+    .title, .date, a, h1 { color: $shaleDark; }
+
+    .title {
+      font-size: 20px;
+    }
+  }
+}
