--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -1,5 +1,6 @@
 .container
-  .col-sm-12.col-md-12
-    h1 New Project
+  .row
+    .col-md-12
+      h1 New Project
 
-    = render 'form', project: @project
+      = render 'form', project: @project
