--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -2,13 +2,14 @@
 
 #project-show
   .container
-    .col-sm-12.col-md-12
+    .row
+      .col-sm-12.col-md-12
 
-      .project-body
-        .title
-          h1 = @project.title
+        .project-body
+          .title
+            h1 = @project.title
 
-          - if current_user && @project.users.include?(current_user)
-            = link_to "Edit project", edit_project_path(@project)
-            span.mhl |
-            = link_to 'Delete', @project, method: :delete, data: { confirm: 'Are you sure?' } 
+            - if current_user && @project.users.include?(current_user)
+              = link_to "Edit project", edit_project_path(@project)
+              span.mhl |
+              = link_to 'Delete', @project, method: :delete, data: { confirm: 'Are you sure?' } 
