lol skip all the tests

--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,6 +1,6 @@
 .container
   .comments
-    - @commentable.comments.each do |comment|
+    - @comments.each do |comment|
       .comment
         .comment-user = comment.user.username
         .comment-content = comment.content
