--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,7 +14,7 @@
 }
 
 .post {
-  border: 2px solid $grayLighter;
+  // border: 2px solid $grayLighter;
   border-radius: 6px;
   padding: 20px 22px 18px 22px;
   margin-top: 5px;
