--- a/app/assets/stylesheets/type.scss
+++ b/app/assets/stylesheets/type.scss
@@ -1,7 +1,8 @@
 html, body, p, h1, h2, h3, h4, h5,
 ul, ol, li, blockquote, label, form,
 input, span, a {
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  // font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  font-family: CircularStd;
   color: $black;
 }
 
