--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -18,6 +18,7 @@ $newsletterForm: #FEECB1;
 $blue:                     #049cdb;
 $blueDark:                 #0064cd;
 $blueGreen:                #1486b3;
+$jellyGreen:               #29D04E;
 $green:                    #46a546;
 $red:                      #9d261d;
 $yellow:                   #ffc40d;
