--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,73 +1,106 @@
-html,
-body {
-  margin: 0;
-  overflow: hidden;
-  height: 100%;
-}
+// html,
+// body {
+//   margin: 0;
+//   overflow: hidden;
+//   height: 100%;
+// }
 
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
-  width: 100%;
-  height: 110vh;
   z-index: 1;
-  position: absolute;
-  top: -70px;
-  background: #DE2424;
+  position: relative;
+  background: $jellyGreen;
+  width: 181px;
+  height: 39px;
 }
 
 .home {
-  .cover {
+  width: 100%;
+  .header {
+    background: blue;
     width: 100%;
-    height: 100%;
-    position: absolute;
+    min-height: 300px;
     display: block;
     z-index: 3;
-    // mix-blend-mode: darken;
     background: white;
     mix-blend-mode: lighten;
+    border: 5px solid $jellyGreen;
+    border-radius: 8px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 32px;
+
+    h1 {
+      position: relative;
+      top: -50px;
+      font-size: 38px;
+      font-family: CircularStd;
+      font-weight: 800;
+      -webkit-font-smoothing: antialiased;
+      z-index: 2;
+      margin: 0 auto;
+      width: 100%;
+      height: auto;
+      display: inline-block;
+      mix-blend-mode: lighten;
+      opacity: 1;
+      user-select: none;
+      color: $jellyGreen;
+      background: white;
+    }
+    p, a, span {
+      font-family: CircularStd;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 36px;
+      -webkit-font-smoothing: antialiased;
+    }
+    a {
+      color: black;
+      display: inline-block;
+      font-weight: 600;
+      padding-bottom: 0px;
+      border-bottom: 4px solid $jellyGreen;
+    }
+    .block {
+      margin-top: 60px;
+    }
+    .social-icons {
+      @media (min-width: 768px) {
+        float: right;
+        margin-top: 0;
+      }
+      margin-top: 40px;
+      display: inline-block;
+      vertical-align: bottom;
+      a {
+        border: none;
+      }
+    }
   }
-  h1 {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    padding-top: 25vh;
-    text-align: center;
-    font-family: 'Baloo', cursive;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    display: block;
-    font-size: 200px;
-    mix-blend-mode: initial;
-    // mix-blend-mode: multiply;
-    opacity: 1;
-    letter-spacing: -0.25rem;
-    user-select: none;
-    color: black;
-    background: white;
-  }
-  p {
-    // font-weight: 700;
-    -webkit-font-smoothing: antialiased;
-    // font-family: 'Merriweather', cursive;
-    font-family: 'Fredoka One', cursive;
-    position: relative;
-    font-size: 32px;
-    text-align: center;
-    margin: 0 auto;
-    width: 56%;
-    height: 100%;
-    color: black;
-    top: 54vh;
-    background: transparent;
-    z-index: 3;
-    mix-blend-mode: initial;
-    line-height: 49px;
-  }
-  sub {
-    // color: $white;
-    font-size: 32px;
-    letter-spacing: 1px;
+
+  .posts {
+    .home-post {
+      text-align: left;
+      padding: 12px;
+      width: 700px;
+
+      h1 {
+        font-size: 38px;
+        -webkit-font-smoothing: antialiased;
+        font-weight: 600;
+      }
+      p {
+        -webkit-font-smoothing: antialiased;
+        font-size: 19.5px;
+        line-height: 30px;
+        color: black;
+        font-weight: 400;
+      }
+      .date {
+        color: $grayLight;
+      }
+    }
   }
 }
 
