--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,151 +1,57 @@
-<script type="text/paperscript" canvas="canvas">
-  function Ball(r, p, v) {
-    this.radius = r;
-    this.point = p;
-    this.vector = v;
-    this.maxVec = 2.5;
-    this.numSegment = Math.floor(r / 3 + 2);
-    this.boundOffset = [];
-    this.boundOffsetBuff = [];
-    this.sidePoints = [];
-    this.path = new Path({
-      fillColor: {
-        hue: (Math.random() * 20) + 336,
-        saturation: 1,
-        brightness: 1
-      },
-      blendMode: 'lighter'
-    });
+<%= javascript_include_tag('drawsomeballs', type: "text/paperscript", canvas: "canvas") %>
 
-    for (var i = 0; i < this.numSegment; i ++) {
-      this.boundOffset.push(this.radius);
-      this.boundOffsetBuff.push(this.radius);
-      this.path.add(new Point());
-      this.sidePoints.push(new Point({
-          angle: 360 / this.numSegment * i,
-          length: 1
-      }));
-    }
-  }
+<div class="container">
+  <div class="row">
+    <div class="home">
 
-  Ball.prototype = {
-    iterate: function() {
-        this.checkBorders();
-        if (this.vector.length > this.maxVec)
-            this.vector.length = this.maxVec;
-        this.point += this.vector;
-        this.updateShape();
-    },
+      <div class="header">
+        <canvas id='canvas' class='animated fadeIn' resize hidpi="off" background="#29D04E">
+        </canvas>
+        <h1 class="">
+          Jelly Labs
+        </h1>
+        <p>
+          We're Denny and Cindy, working on building equitable platforms for scientists.
+        </p>
 
-    checkBorders: function() {
-        var size = view.size;
-        if (this.point.x < -this.radius)
-            this.point.x = size.width + this.radius;
-        if (this.point.x > size.width + this.radius)
-            this.point.x = -this.radius;
-        if (this.point.y < -this.radius)
-            this.point.y = size.height + this.radius;
-        if (this.point.y > size.height + this.radius)
-            this.point.y = -this.radius;
-    },
+        <div class="block">
+          <a href="" target="_blank">
+            Sign up for our newsletter
+          </a>
 
-    updateShape: function() {
-        var segments = this.path.segments;
-        for (var i = 0; i < this.numSegment; i ++)
-            segments[i].point = this.getSidePoint(i);
+          <div class="social-icons">
+            <span>Join us!</span>
+            <span>
+              <a href=""><i class="fa fa-slack mlm"></i></a>
+            </span>
+            <span>
+              <a href=""><i class="fa fa-twitter mlm"></i></a>
+            </span>
+            <span>
+              <a href=""><i class="fa fa-github mlm"></i></a>
+            </span>
+          </div>
+        </div>
+      </div>
 
-        this.path.smooth();
-        for (var i = 0; i < this.numSegment; i ++) {
-            if (this.boundOffset[i] < this.radius / 4)
-                this.boundOffset[i] = this.radius / 4;
-            var next = (i + 1) % this.numSegment;
-            var prev = (i > 0) ? i - 1 : this.numSegment - 1;
-            var offset = this.boundOffset[i];
-            offset += (this.radius - offset) / 15;
-            offset += ((this.boundOffset[next] + this.boundOffset[prev]) / 2 - offset) / 3;
-            this.boundOffsetBuff[i] = this.boundOffset[i] = offset;
-        }
-    },
+      <div class="posts">
 
-    react: function(b) {
-      var dist = this.point.getDistance(b.point);
-      if (dist < this.radius + b.radius && dist != 0) {
-        var overlap = this.radius + b.radius - dist;
-        var direc = (this.point - b.point).normalize(overlap * 0.015);
-        this.vector += direc;
-        b.vector -= direc;
+        <% @posts.each do |post| %>
 
-        this.calcBounds(b);
-        b.calcBounds(this);
-        this.updateBounds();
-        b.updateBounds();
-      }
-    },
+          <div class="home-post">
+            <h1><%= post.title %></h1>
+            <p class="date"><%= "#{time_ago_in_words(post.created_at)} ago" %></p>
+            <p><%= post.body.truncate(600, separator: "...").html_safe %></p>
+            <%= link_to "read more", post_path(post) %>
+          </div>
 
-    getBoundOffset: function(b) {
-        var diff = this.point - b;
-        var angle = (diff.angle + 180) % 360;
-        return this.boundOffset[Math.floor(angle / 360 * this.boundOffset.length)];
-    },
+        <% end %>
 
-    calcBounds: function(b) {
-      for (var i = 0; i < this.numSegment; i ++) {
-        var tp = this.getSidePoint(i);
-        var bLen = b.getBoundOffset(tp);
-        var td = tp.getDistance(b.point);
-        if (td < bLen) {
-            this.boundOffsetBuff[i] -= (bLen  - td) / 2;
-        }
-      }
-    },
+      </div>
 
-    getSidePoint: function(index) {
-        return this.point + this.sidePoints[index] * this.boundOffset[index];
-    },
+    </div>
 
-    updateBounds: function() {
-        for (var i = 0; i < this.numSegment; i ++)
-            this.boundOffset[i] = this.boundOffsetBuff[i];
-    }
-  };
-
-  //--------------------- main ---------------------
-
-  var balls = [];
-  var numBalls = 22;
-  for (var i = 0; i < numBalls; i++) {
-      var position = Point.random() * view.size;
-      var vector = new Point({
-          angle: 360 * Math.random(),
-          length: Math.random() * 10
-      });
-      var radius = Math.random() * 100 + 60;
-      balls.push(new Ball(radius, position, vector));
-  }
-
-  function onFrame() {
-      for (var i = 0; i < balls.length - 1; i++) {
-          for (var j = i + 1; j < balls.length; j++) {
-              balls[i].react(balls[j]);
-          }
-      }
-      for (var i = 0, l = balls.length; i < l; i++) {
-          balls[i].iterate();
-      }
-  }
-  $( document ).on('turbolinks:load', function() {
-    window.location.reload()
-  })
-</script>
-
-<div class="home">
-  <div class="cover">
-    <h1 class="animated fadeIn">
-      Jelly Labs <sub>pbc</sub>
-    </h1>
-    <p class="animated fadeIn">We're a team making new products and platforms for scientists.</p>
   </div>
-
-  <canvas id='canvas' resize hidpi="off" background="#DE2424">
-  </canvas>
 </div>
+
+
