--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -24,7 +24,6 @@
   }
 
   .title {
-    font-family: $serifFontFamily;
     font-size: 20px;
     font-weight: 700;
   }
@@ -42,12 +41,27 @@
 
 
 #post-show {
-  .post-body {  
-    margin: 40px 0;
+  .post-header,
+  .post-body,
+  .post-comments {  
+    margin: 0 auto;
+    margin-bottom: 80px;
+    width: 720px;
 
     h1 {
-      font-family: $serifFontFamily;
       font-size: 32px;
+    }
+  }
+
+  p {
+    line-height: 33px;
+    font-size: 19px;
+  }
+
+  .post-comments {
+    textarea {
+      margin-top: 40px;
+      width: 100%;
     }
   }
 }
