--- a/app/assets/stylesheets/shared/_nav.scss
+++ b/app/assets/stylesheets/shared/_nav.scss
@@ -1,11 +1,33 @@
 nav {
-  // background-image: asset-url('p5.svg');
-  // background-repeat: repeat;
-  // background-color: #FDF0EF;
   background-color: transparent;
   z-index: 3;
   position: relative;
   padding: 0.9rem 0;
+
+  .header {
+    display: flex;
+    min-height: 80px;
+    a {    
+      left: -178px;
+      top: -6px;
+      border-bottom: none;
+      height: 45px;
+      &:hover {
+        opacity: 1
+      }
+    }
+    h1 {
+      left: 0;
+      top: 0;
+    }
+  }
+  canvas[resize] {
+    z-index: 1;
+    position: relative;
+    background: $jellyGreen;
+    width: 178px;
+    height: 39px;
+  }
   .navbar-brand {
     position: relative;
     top: -3px;
