--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,3 +14,5 @@ html lang='en-us'
   javascript:
     if (!Turbolinks) { location.reload(); }
     Turbolinks.dispatch("turbolinks:load");
+
+= javascript_include_tag('drawsomeballs', type: "text/paperscript", canvas: "canvas")
