--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -42,7 +42,7 @@
             <h1><%= post.title %></h1>
             <p class="date"><%= "#{time_ago_in_words(post.created_at)} ago" %></p>
             <p><%= post.body.truncate(600, separator: "...").html_safe %></p>
-            <%= link_to "read more", post_path(post) %>
+            <%= link_to "Read more", post_path(post) %>
           </div>
 
         <% end %>
