Only show comments if comments

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -14,7 +14,8 @@
         = link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } 
 
     .post-comments
-      h3 Comments
+      - if @post.comments
+        h3 Comments
       - @post.comments.each do |comment|
         .comment.mvm
           .comment-user
