Remove unused stuff

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
 @import "animate.css/animate.min";
-@import "circular-std/dist/index";
+// @import "circular-std";
 
 // layouts
 @import "layout";
