--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -1,5 +1,4 @@
-/* CircularStd @font-face kit */
-@font-face {
+/*@font-face {
   font-family: "CircularStd";
   src: url("../fonts/CircularStd-Black.eot");
   src: url("../fonts/CircularStd-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/CircularStd-Black.woff") format("woff"), url("../fonts/CircularStd-Black.ttf") format("truetype"), url("../fonts/CircularStd-Black.svg#bcc26993292869431e54c666aafa8fcd") format("svg");
@@ -55,3 +54,4 @@
   font-weight: 400;
   font-style: italic;
 }
+*/*/
