--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -22,14 +22,14 @@ head
   meta itemprop="name" content=yield(:title)
   meta itemprop="description" content=meta_tag_sanitize_and_truncate(meta_description)
 
-  meta property='og:site_name' content='Jelly.science'
+  meta property='og:site_name' content='jellypbc.com'
   meta property='og:url' content=request.original_url
   meta property="og:title" content=meta_tag_sanitize_and_truncate(yield(:title))
   meta property="og:description" content=meta_tag_sanitize_and_truncate(meta_description)
   meta property="og:image" content=meta_image_url
   meta property="og:image:secure_url" content=meta_image_url
 
-  meta name="twitter:domain" content="jelly.science"
+  meta name="twitter:domain" content="jellypbc.com"
   meta name='twitter:site' content='@jellyscience'
   meta name='twitter:widgets:csp' content='on'
   meta name="twitter:title" content=yield(:title)
