--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag('drawsomeballs', type: "text/paperscript", canvas: "canvas") %>
+
 <div class="container">
   <div class="row">
     <div class="home">
