Adds links back in

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,3 @@
-<%= javascript_include_tag('drawsomeballs', type: "text/paperscript", canvas: "canvas") %>
-
 <div class="container">
   <div class="row">
     <div class="home">
@@ -15,20 +13,20 @@
         </p>
 
         <div class="block">
-          <a href="" target="_blank">
+          <a href="https://mailchi.mp/942ff16d32c6/jelly" target="_blank">
             Sign up for our newsletter
           </a>
 
           <div class="social-icons">
             <span>Join us!</span>
             <span>
-              <a href=""><i class="fa fa-slack mlm"></i></a>
+              <a href="http://jellypbc.slack.com"><i class="fa fa-slack mlm"></i></a>
             </span>
             <span>
-              <a href=""><i class="fa fa-twitter mlm"></i></a>
+              <a href="http://twitter.com/jellypbc"><i class="fa fa-twitter mlm"></i></a>
             </span>
             <span>
-              <a href=""><i class="fa fa-github mlm"></i></a>
+              <a href="https://gitlab.com/jellylabs/jelly"><i class="fa fa-github mlm"></i></a>
             </span>
           </div>
         </div>
