--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -44,9 +44,13 @@
   .post-header,
   .post-body,
   .post-comments {  
+    @media (min-width: 768px) {
+      width: 720px;
+    }
+    width: auto;
+
     margin: 0 auto;
     margin-bottom: 80px;
-    width: 720px;
 
     h1 {
       font-size: 32px;
