--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -37,8 +37,8 @@
         <% @posts.each do |post| %>
 
           <div class="home-post">
-            <h1><%= post.title %></h1>
-            <p class="date"><%= "#{time_ago_in_words(post.created_at)} ago" %></p>
+            <h1><%= link_to post.title, post_path(post) %></h1>
+            <p class="date"><%= "#{post.created_at.strftime("%b %d, %Y")}" %></p>
             <p><%= post.body.truncate(600, separator: "...").html_safe %></p>
             <%= link_to "Read more", post_path(post) %>
           </div>
@@ -46,6 +46,7 @@
         <% end %>
 
       </div>
+
 
     </div>
 
