--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -47,8 +47,7 @@ head
   = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
-  link href="https://fonts.googleapis.com/css?family=Merriweather|Baloo|Fredoka+One|Open+Sans:400,600,700" rel="stylesheet"
-  / link href="jelly.png" rel="shortcut icon" type="image/x-icon"/
+  / link href="https://fonts.googleapis.com/css?family=Merriweather|Baloo|Fredoka+One|Open+Sans:400,600,700" rel="stylesheet"
 
   - if Rails.env.production?
     = javascript_include_tag src="https://www.googletagmanager.com/gtag/js?id=UA-148335124-1"
