--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
     <div class="home">
 
       <div class="header">
-        <canvas id='canvas' class='animated fadeIn' resize hidpi="off" background="#29D04E">
+        <canvas id='canvas' resize hidpi="off" background="#29D04E">
         </canvas>
         <h1 class="">
           Jelly Labs
