--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,28 +1,28 @@
 nav
   .container.d-flex.flex-column.flex-md-row.align-items-center
     .header
-      canvas id='canvas' class='animated fadeIn' resize=true hidpi="off" background="#29D04E"
+      canvas id='canvas' resize=true hidpi="off" background="#29D04E"
       a.my-0.mr-md-auto.navbar-brand href=root_path
         h1 Jelly Labs
 
 
-      - if current_user
-        .my-2.my-md-0.right
-          a.mrg href=new_post_path
-            | Write
+      / - if current_user
+      /   .my-2.my-md-0.right
+      /     a.mrg href=new_post_path
+      /       | Write
 
-          .nav-item.dropdown
-            a#navbarDropdown.nav-link.dropdown-toggle href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-              | #{current_user.username}
-            .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
-              a.dropdown-item href=dashboard_path
-                | My Dashboard
-              a.dropdown-item href=projects_path
-                | My Projects
-              a.dropdown-item href=posts_path
-                | My Posts
-              a.dropdown-item href=settings_path
-                | User Settings
-              .dropdown-divider
-              a.dropdown-item href=logout_path
-                | Log Out
+      /     .nav-item.dropdown
+      /       a#navbarDropdown.nav-link.dropdown-toggle href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+      /         | #{current_user.username}
+      /       .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
+      /         a.dropdown-item href=dashboard_path
+      /           | My Dashboard
+      /         a.dropdown-item href=projects_path
+      /           | My Projects
+      /         a.dropdown-item href=posts_path
+      /           | My Posts
+      /         a.dropdown-item href=settings_path
+      /           | User Settings
+      /         .dropdown-divider
+      /         a.dropdown-item href=logout_path
+      /           | Log Out
