--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,10 +1,3 @@
-html,
-body {
-  margin: 0;
-  // overflow: hidden;
-  height: 100%;
-}
-
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
   z-index: 1;
@@ -82,24 +75,12 @@ canvas[resize] {
   }
 }
 
-.footer {
-  margin-top: 70px;
-  background: #F5F5F5;
-  padding: 20px;
-  text-align: center;
-  width: 100%;
-
-  img {
-    height: 43px;
-    top: -38px;
-    position: relative;
-  }
-}
-
 .home {
   width: 100%;
 
   .posts {
+    margin-bottom: 80px;
+
     .home-post {
       @media (min-width: 768px) {
         width: 700px;
@@ -108,7 +89,7 @@ canvas[resize] {
       width: auto;
       text-align: left;
       padding: 12px;
-      margin-top: 60px;
+      margin: 60px 0;
 
       h1 {
         a { color: $black; }
