--- a/app/assets/stylesheets/posts/editor.scss
+++ b/app/assets/stylesheets/posts/editor.scss
@@ -8,6 +8,7 @@
   $fontColor: $shaleDark;
 
   padding-top: 0px;
+  margin-bottom: 100px;
 
   input.title {
     -webkit-font-smoothing: antialiased;
@@ -65,6 +66,17 @@
     button {
       font-size: 16px;
       padding: 4px 10px;
+    }
+  }
+
+  .errors {
+    background: $faintPink;
+    padding: 14px 12px;
+    border-radius: 4px;
+    margin-top: 12px;
+    .error {
+      color: $error;
+      margin-bottom: 0;
     }
   }
 }
