--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,5 +1,6 @@
 .container
   h1 Posts
+  = link_to "New post", new_post_path, class: "btn btn-primary"
 
   - @posts.each do |post|
     = link_to post do
@@ -10,3 +11,4 @@
         = link_to "Edit post", edit_post_path(post)
         span.mhl |
         = link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } 
+  = will_paginate @posts
