--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
 @import "animate.css/animate.min";
+@import "trix/dist/trix";
 
 // layouts
 @import "layout";
