--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -36,12 +36,7 @@
 
         <% @posts.each do |post| %>
 
-          <div class="home-post">
-            <h1><%= link_to post.title, post_path(post) %></h1>
-            <p class="date"><%= "#{post.created_at.strftime("%b %d, %Y")}" %></p>
-            <p><%= post.body.truncate(600, separator: "...").html_safe %></p>
-            <%= link_to "Read more", post_path(post) %>
-          </div>
+          <%= render 'home_post', post: post %>
 
         <% end %>
 
