--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -4,9 +4,11 @@
   .container
 
     .post-body
-      = react_component "PostRenderer", post: PostSerializer.new(@post).serializable_hash
-      
-      / = @post.render_body.html_safe
+      .title
+        h1 = @post.title
+
+      / = react_component "PostRenderer", post: PostSerializer.new(@post).serializable_hash
+      = @post.content.to_s.html_safe
 
     .post-header
       - if current_user && current_user == @post.user
@@ -15,7 +17,7 @@
         span.mhs |
         = link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } 
 
-    .post-comments
+    .post-comments.mvg
       h3 Comments
       - @post.comments.each do |comment|
         .comment.mvm
