--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -35,7 +35,7 @@ head
   meta name="twitter:title" content=yield(:title)
   meta name="twitter:description" content=meta_tag_sanitize_and_truncate(meta_description)
   meta name="twitter:image" content=meta_image_url
-  meta name="twitter:card" content="summary"
+  meta name="twitter:card" content="summary_large_image"
 
 
   = favicon_link_tag asset_path('favicon.png')
