Fixes meta card description

--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -1,5 +1,5 @@
 ruby:
-  meta_description = content_for?(:meta_description) ? yield(:meta_description) : "jelly"
+  meta_description = content_for?(:meta_description) ? yield(:meta_description) : "A new kind of science"
 
   if content_for?(:meta_project_image_url)
     meta_image_url = yield(:meta_project_image_url)
