--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title) { "⚗️ Jelly Labs PBC" } %>
+<% content_for(:meta_description) { "A new kind of science" } %>
 
 <div class="container">
   <div class="row">
