--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,4 +1,5 @@
 - content_for(:title) { "#{@post.title}" }
+- content_for(:meta_description) { truncate(strip_tags(post.content.to_s), length: 30, separator: '...') }
 
 #post-show
   .container
